# mslicer

./: .gitignore  Cargo.toml  Changelog.md  README.md  TODO.md  goo.hexpat
.github/workflows/: build.yml  codspeed.yml
common/: Cargo.toml
common/benches/: benchmark.rs
common/src/: annotations.rs  bitvec.rs  config.rs  format.rs  geometry.rs  image.rs  lib.rs  misc.rs  oklab.rs  progress.rs  rle.rs  rle_image.rs  serde.rs  serde_impls.rs
common/src/color/: mod.rs  oklab.rs  rgb.rs
common/src/container/: bitvec.rs  clusters.rs  image.rs  mod.rs
common/src/serde/: deserializer.rs  mod.rs  serializer.rs  types.rs
common/src/slice/: config.rs  (+3 more)
ctb_format/: Cargo.toml  README.md
ctb_format/src/: crypto.rs  file.rs  header.rs  layer.rs  layer_coding.rs  lib.rs  main.rs  preview.rs  resin.rs  settings.rs
docs/: getting_started.md  getting_started.txt  miscellaneous.md  readme.md
format/: README.md
format/ctb_format/: Cargo.toml  README.md
format/goo_format/: Cargo.toml  README.md
format/mesh_format/: Cargo.toml
format/nanodlp_format/: Cargo.toml
goo_format/: Cargo.toml
goo_format/src/: default.rs  encoded_layer.rs  file.rs  header.rs  header_info.rs  layer_content.rs  lib.rs  main.rs  preview_image.rs
mesh_format/: Cargo.toml
mesh_format/src/: lib.rs  obj.rs  progress.rs  stl.rs  util.rs
mslicer/: Cargo.toml  build.rs
mslicer/benches/: clustering.rs  common.rs  detect_islands.rs
mslicer/src/: app.rs  components.rs  config.rs  lib.rs  main.rs  remote_print.rs  slice_operation.rs  ui_state.rs  util.rs
mslicer/src/app/: config.rs  history.rs  mod.rs  model.rs  post_processing_operation.rs  project.rs  remote_print.rs  slice_operation.rs  task.rs
mslicer/src/app/project/: mod.rs  model.rs  storage.rs
mslicer/src/app/task/: acceleration_structures.rs  file_dialog.rs  island_detection.rs  mesh_load.rs  mesh_manifold.rs  mod.rs  project.rs  remote_print.rs  save_result.rs  thread.rs
mslicer/src/plugins/: anti_alias.rs  elephant_foot_fixer.rs  mod.rs
mslicer/src/post_processing/: mod.rs  pass.rs
mslicer/src/post_processing/island_detection/: mod.rs  slice_coord.rs
mslicer/src/project/: mesh.rs  mod.rs  model.rs  storage.rs
mslicer/src/render/: camera.rs  consts.rs  mod.rs  model.rs  preview.rs  rendered_mesh.rs  slice_preview.rs  util.rs  workspace.rs
mslicer/src/render/callback/: mod.rs  slice_preview.rs  workspace.rs
mslicer/src/render/camera/: mod.rs  spacenav.rs
mslicer/src/render/dispatch/: mod.rs
mslicer/src/render/dispatch/line/: build_plate.rs  line_support_debug.rs  mod.rs  normals.rs
mslicer/src/render/dispatch/point/: mod.rs  overhangs.rs  target.rs
mslicer/src/render/dispatch/solid_line/: build_plate.rs  line_support_debug.rs  mod.rs  normals.rs
mslicer/src/render/pipelines/: build_plate.rs  composite.rs  consts.rs  line.rs  mod.rs  model.rs  point.rs  slice_preview.rs  solid_line.rs  support.rs  target_point.rs
mslicer/src/render/shaders/: common.wgsl  composite.wgsl  line.wgsl  model.wgsl  point.wgsl  slice_preview.wgsl  solid.wgsl  solid_line.wgsl  support.wgsl
mslicer/src/render/slice_preview/: mod.rs  pipeline.rs
mslicer/src/render/workspace/: mod.rs  model.rs  support.rs
mslicer/src/render/workspace/line/: build_plate.rs  line_support_debug.rs  mod.rs  normals.rs
mslicer/src/render/workspace/point/: mod.rs  overhangs.rs  target.rs
mslicer/src/shaders/: build_plate.wgsl  model.wgsl  slice_preview.wgsl  solid.wgsl  solid_line.wgsl
mslicer/src/task/: acceleration_structures.rs  auto_layout.rs  file_dialog.rs  island_detection.rs  mesh_load.rs  mesh_manifold.rs  mod.rs  project.rs  remote_print.rs  save_result.rs  split_bodies.rs  thread.rs  webhook.rs
mslicer/src/ui/: components.rs  drag_and_drop.rs  extentions.rs  markdown.rs  mod.rs  panels.rs  popup.rs  state.rs
mslicer/src/windows/: about.rs  logs.rs  mod.rs  models.rs  post_processing.rs  remote_print.rs  slice_config.rs  slice_operation.rs  slice_preview.rs  slice_progress.rs  stats.rs  supports.rs  tasks.rs  top_bar.rs  workspace.rs
mslicer/src/windows/models/: collection.rs  mod.rs  model.rs
mslicer/src/windows/tools/: auto_layout.rs  exposure_test.rs  graphics_3d.rs  internal_exposure_test.rs  mod.rs  printed_circuit_board.rs
nanodlp_format/: Cargo.toml  README.md
nanodlp_format/benches/: benchmark.rs
nanodlp_format/src/: file.rs  layer.rs  lib.rs  main.rs  png.rs  types.rs
remote_print/: Cargo.toml  README.md
remote_print/src/: commands.rs  http_server.rs  main.rs  mqtt_server.rs  status.rs
remote_send/: Cargo.toml  README.md
remote_send/src/: commands.rs  http_server.rs  lib.rs  main.rs  mqtt_server.rs  status.rs
remote_send/src/commands/: mod.rs
remote_send/src/mqtt/: misc.rs  mod.rs
remote_send/src/mqtt/packets/: connect.rs  mod.rs  publish.rs  publish_ack.rs  subscribe.rs  subscribe_ack.rs
slicer/: Cargo.toml  README.md
slicer/benches/: benchmark.rs
slicer/src/: args.rs  builder.rs  format.rs  half_edge.rs  lib.rs  main.rs  mesh.rs  segments.rs  slicer.rs  tmp_image.rs  util.rs
slicer/src/bvh/: bounding_box.rs  bvh_node.rs  intersection.rs  mod.rs
slicer/src/format/: iter.rs  mod.rs  svg.rs
slicer/src/geometry/: mod.rs  segments_1d.rs  triangle.rs
slicer/src/geometry/bvh/: bounding_box.rs  bvh_node.rs  mod.rs
slicer/src/intersection/: mod.rs  segments_1d.rs  triangle.rs
slicer/src/intersection/bvh/: bounding_box.rs  bvh_node.rs  mod.rs
slicer/src/post_process/: anti_alias.rs  downsample.rs  elephant_foot_fixer.rs  island_detection.rs  mod.rs  variable_layer_height.rs
slicer/src/segments/: mod.rs  segments_1d.rs
slicer/src/slicer/: mod.rs  slice_raster.rs  slice_vector.rs
slicer/src/slicer/raster/: edge_table.rs  mod.rs
slicer/src/supports/: line.rs  mod.rs  overhangs.rs
slicer/src/tools/: exposure_test.rs  internal_exposure_test.rs  mod.rs
src/: goo.rs  main.rs
src/format/: goo.rs  mod.rs
tools/: Cargo.toml
tools/src/: exposure_test.rs  internal_exposure_test.rs  lib.rs
ui/: Cargo.toml
ui/src/: app.rs  camera.rs  components.rs  main.rs  render.rs  workspace.rs
(+78 files in other folders)
