[workspace]
resolver = "2"
members = [
    "common",
    "ctb_format",
    "goo_format",
    "mslicer",
    "remote_send",
    "slicer"
]

[workspace.dependencies]
aes = "0.8.4"
afire = "3.0.0-alpha.3"
anyhow = "1.0.99"
bincode = "1.3.3"
bitflags = "2.9.4"
bytemuck = "1.23.2"
cbc = "0.1.2"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
clone-macro = "0.1.0"
const_format = "0.2.34"
criterion = "0.7.0"
dirs = "6.0.0"
eframe = { version = "0.27.2", features = ["wgpu", "serde"] }
egui = "0.27.2"
egui-phosphor = { git = "https://github.com/connorslade/egui-phosphor" }
egui-wgpu = "0.27.2"
egui_dock = { version = "0.12.0", features = ["serde"] }
egui_tracing = "=0.2.2"
encase = { version = "0.11.0", features = ["nalgebra"] }
image = "=0.25.6"
imageproc = "0.25.0"
itertools = "0.14.0"
libblur = "0.15.1"
markdown = "0.3.0"
md5 = "0.8.0"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
notify-rust = "4.11.7"
num-traits = "0.2.19"
obj-rs = "0.7.4"
open = "5.3.2"
ordered-float = "5.0.0"
parking_lot = "0.12.4"
rand = "0.9.2"
rayon = "1.11.0"
rfd = "0.15.4"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
sha2 = "0.10.9"
soon = { git = "https://github.com/connorslade/misc" }
stl_io = "0.8.5"
svg = "0.18.0"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wgpu = "0.19.4"
