[package]
name = "mslicer"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
chrono.workspace = true
clone-macro.workspace = true
const_format.workspace = true
dirs.workspace = true
eframe.workspace = true
egui-phosphor.workspace = true
egui-wgpu.workspace = true
egui.workspace = true
egui_dock.workspace = true
egui_tracing.workspace = true
encase.workspace = true
image.workspace = true
imageproc.workspace = true
itertools.workspace = true
libblur.workspace = true
markdown.workspace = true
nalgebra.workspace = true
notify-rust.workspace = true
open.workspace = true
parking_lot.workspace = true
plexus.workspace = true
rand.workspace = true
rayon.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wgpu.workspace = true

common = { path = "../common" }
goo_format = { path = "../goo_format" }
remote_send = { path = "../remote_send" }
slicer = { path = "../slicer" }
derive_more = { version = "2.0.1", features = ["full"] }
cached = "0.56.0"
proptest = "1.7.0"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "island_detection"
path = "benches/detect_islands.rs"
harness = false

[[bench]]
name = "clustering"
path = "benches/clustering.rs"
harness = false
