[package]
name = "mslicer"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
chrono.workspace = true
clone-macro.workspace = true
const_format.workspace = true
dirs.workspace = true
eframe.workspace = true
egui-phosphor.workspace = true
egui-wgpu.workspace = true
egui.workspace = true
egui_dock.workspace = true
egui_tracing.workspace = true
encase.workspace = true
image.workspace = true
itertools.workspace = true
markdown.workspace = true
nalgebra.workspace = true
notify-rust.workspace = true
open.workspace = true
parking_lot.workspace = true
poll-promise.workspace = true
rand.workspace = true
rayon.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wgpu.workspace = true

common = { path = "../common" }
goo_format = { path = "../goo_format" }
mesh_format = { path = "../mesh_format" }
remote_send = { path = "../remote_send" }
slicer = { path = "../slicer" }
