[package]
name = "mslicer"
version = "0.5.0"
edition = "2024"

[dependencies]
common.workspace = true
mesh_format.workspace = true
remote_send.workspace = true
slicer.workspace = true

anyhow.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
chrono.workspace = true
clone-macro.workspace = true
concat-idents.workspace = true
const_format.workspace = true
dirs.workspace = true
eframe.workspace = true
egui-phosphor.workspace = true
egui-wgpu.workspace = true
egui.workspace = true
egui_dock.workspace = true
egui_tracing.workspace = true
encase.workspace = true
image.workspace = true
itertools.workspace = true
markdown.workspace = true
nalgebra.workspace = true
notify-rust.workspace = true
open.workspace = true
parking_lot.workspace = true
poll-promise.workspace = true
rand.workspace = true
rayon.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wgpu.workspace = true
