[package]
name = "remote_send"
version = "0.1.0"
edition = "2021"

[dependencies]
afire = "3.0.0-alpha.3"
anyhow = "1.0.86"
bitflags = "2.5.0"
chrono = "0.4.38"
md5 = "0.7.0"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
soon = { git = "https://github.com/connorslade/misc" }

common = { path = "../common" }
