[package]
name = "remote_send"
version = "0.1.0"
edition = "2021"

[dependencies]
afire.workspace = true
anyhow.workspace = true
bitflags.workspace = true
chrono.workspace = true
md5.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde.workspace = true
soon.workspace = true

common = { path = "../common" }
