[package]
name = "remote_send"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true

afire.workspace = true
anyhow.workspace = true
bitflags.workspace = true
chrono.workspace = true
md5.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
soon.workspace = true
tracing.workspace = true
