[package]
name = "slicer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
rayon.workspace = true
svg.workspace = true
tracing.workspace = true

common = { path = "../common" }
ctb_format = { path = "../ctb_format" }
goo_format = { path = "../goo_format" }
mesh_format = { path = "../mesh_format" }

[dev-dependencies]
criterion.workspace = true

[[bin]]
name = "slicer"
path = "bin/main.rs"

[[bench]]
name = "benchmark"
harness = false
