[package]
name = "slicer"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
ctb_format.workspace = true
goo_format.workspace = true
mesh_format.workspace = true
nanodlp_format.workspace = true

anyhow.workspace = true
clap.workspace = true
clone-macro.workspace = true
const_format.workspace = true
image.workspace = true
imageproc.workspace = true
itertools.workspace = true
libblur.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
rayon.workspace = true
serde.workspace = true
svg.workspace = true
tracing.workspace = true

[[bin]]
name = "slicer"
path = "bin/main.rs"
